--- a/front/html/product.html
+++ b/front/html/product.html
@@ -19,53 +19,7 @@
   </head>
 
   <body>
-    <header>
-      <div class="limitedWidthBlockContainer informations">
-        <div class="limitedWidthBlock">
-          <ul>
-            <li>
-              <img
-                src="../images/icons/phone.svg"
-                alt="logo de téléphone"
-                class="informations__phone"
-              />01 23 45 67 89
-            </li>
-            <li>
-              <img
-                src="../images/icons/mail.svg"
-                alt="logo d'une enveloppe"
-                class="informations__mail"
-              />support@name.com
-            </li>
-            <li>
-              <img
-                src="../images/icons/adress.svg"
-                alt="logo d'un point de géolocalisation"
-                class="informations__address"
-              />01 23 45 67 89
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="limitedWidthBlockContainer menu">
-        <div class="limitedWidthBlock">
-          <a href="./index.html">
-            <img
-              class="logo"
-              src="../images/logo.png"
-              alt="Logo de l'entreprise"
-            />
-          </a>
-          <nav>
-            <ul>
-              <a href="./index.html"><li>Accueil</li></a>
-              <a href="./cart.html"><li>Panier</li></a>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <img class="banniere" src="../images/banniere.jpg" alt="Baniere" />
-    </header>
+    <header id="header"></header>
 
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
@@ -75,37 +29,11 @@
       </div>
     </main>
 
-    <footer>
-      <div class="limitedWidthBlockContainer footerMain">
-        <div class="limitedWidthBlock">
-          <div>
-            <img
-              class="logo"
-              src="../images/logo.png"
-              alt="Logo de l'entreprise"
-            />
-          </div>
-          <div>
-            <p>10 quai de la charente <br />75019 Paris 19</p>
-          </div>
-          <div>
-            <p>Téléphone : 01 23 45 67 89</p>
-          </div>
-          <div>
-            <p>Email : support@name.com</p>
-          </div>
-        </div>
-      </div>
-      <div class="limitedWidthBlockContainer footerSecondary">
-        <div class="limitedWidthBlock">
-          <p>
-            © Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All
-            Rights Reserved | Powered by....&lt;
-          </p>
-        </div>
-      </div>
-    </footer>
+    <footer id="footer"></footer>
+    <script src="../js/include_edito.js"></script>
+
     <script src="../js/script.js"></script>
+
     <script src="../js/product.js"></script>
   </body>
 </html>
