--- a/front/html/index.html
+++ b/front/html/index.html
@@ -16,21 +16,24 @@
   </head>
 
   <body>
-    <header id="header"></header>
+    <header id="header"><nav>
+      <ul>
+      <a href="param.html"><li>paramètres</li></a>
+        <a href="./index.html"><li>Accueil</li></a>
+        <a href="./cart.html"><li>Panier</li></a>
+        <a href="../temp/cart2.html"><li>Panier2</li></a>
+    </nav></header>
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
         <div class="titles">
-          <button onclick="creer_jeu_essai()">jeu</button>
           <h1>Nos produits</h1>
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items"></section>
       </div>
     </main>
-    <button onclick="creer_jeu_essai()">jeu</button>
+
     <footer id="footer"></footer>
-    <script src="../js/include_edito.js"></script>
-    <script src="../js/script.js"></script>
-    <script src="../js/index.js"></script>
+    <script type="module" src="../js/index.js"></script>
   </body>
 </html>
