--- a/front/html/param.html
+++ b/front/html/param.html
@@ -39,7 +39,7 @@
       <div id="change_coord">debb</div>
     </main>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/param.js"></script>
   </body>
 </html>
