--- a/front/html/product.html
+++ b/front/html/product.html
@@ -19,21 +19,25 @@
   </head>
 
   <body>
-    <header id="header"></header>
+    <header id="header"><nav>
+      <ul>
+      <a href="param.html"><li>paramètres</li></a>
+        <a href="./index.html"><li>Accueil</li></a>
+        <a href="./cart.html"><li>Panier</li></a>
+        <a href="../temp/cart2.html"><li>Panier2</li></a>
+    </nav></header>
 
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
         <section class="item">
+          pbme "module" ?<br>
           <article></article>
         </section>
       </div>
     </main>
 
     <footer id="footer"></footer>
-    <script src="../js/include_edito.js"></script>
-
-    <script src="../js/script.js"></script>
-
+   
     <script src="../js/product.js"></script>
   </body>
 </html>
