--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/cart.js"></script>
   </body>
 </html>
