--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -119,9 +119,9 @@
     </main>
 
     <footer id="footer"></footer>
-    <script src="../js/include_edito.js"></script>
+   
     <script src="../js/main.js"></script>
 
-    <script src="../js/cart.js"></script>
+    <script  type="module" src="../js/cart.js"></script>
   </body>
 </html>
