--- a/front/html/index.html
+++ b/front/html/index.html
@@ -32,6 +32,15 @@
         <section class="items" id="items"></section>
       </div>
     </main>
+    <template id="produitTemplate">
+      <a href="">
+        <article>
+          <img src="" alt="">
+          <h3 class="productName"></h3>
+          <p class="productDescription">legende</article>
+      </a>
+    </template>
+    
 
     <footer id="footer"></footer>
     <script type="module" src="../js/index.js"></script>
