--- a/front/index.html
+++ b/front/index.html
@@ -10,24 +10,28 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
-    <header id="header"><nav>
-      <ul>
+    <header id="header">
+      <nav>
+        <!--  <a href="./debugProduit.html"><li>debugProduit</li></a>
+
       <a href="param.html"><li>paramètres</li></a>
-        <a href="./index.html"><li>Accueil</li></a>
-        <a href="./cart.html"><li>Panier</li></a>
+        <a href="index.html"><li>Accueil</li></a>
+        <a href="front/html/cart.html"><li>Panier</li></a>
         <a href="../temp/cart2.html"><li>Panier2</li></a>
-    </nav></header>
+        -->
+      </nav>
+    </header>
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
         <div class="titles">
           <h1>Nos produits</h1>
-          <h2>Une gamme d'articles exclusifs</h2>
+          <h2>Une gamme d'articles exclusifs !</h2>
         </div>
         <section class="items" id="items"></section>
       </div>
@@ -35,14 +39,15 @@
     <template id="produitTemplate">
       <a href="">
         <article>
-          <img src="" alt="">
+          <img src="" alt="" />
           <h3 class="productName"></h3>
-          <p class="productDescription">legende</article>
+          <p class="productDescription">legende</p>
+        </article>
       </a>
     </template>
-    
 
     <footer id="footer"></footer>
-    <script type="module" src="../js/index.js"></script>
+    <script src="./js/commun.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
