--- a/front/pages/confirmation.html
+++ b/front/pages/confirmation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>Nom du produit</title>
+    <title>Confirmation</title>
 
     <meta charset="utf-8" />
     <meta name="description" content="Plateforme incroyable de e-commerce" />
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link href="../css/style.css" rel="stylesheet" />
-    <link href="../css/product.css" rel="stylesheet" />
+    <link href="../css/confirmation.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -22,16 +22,17 @@
     <header id="header"></header>
 
     <main class="limitedWidthBlockContainer">
-      <div class="limitedWidthBlock">
-        <section class="item">
-          <article></article>
-        </section>
+      <div class="limitedWidthBlock" id="limitedWidthBlock">
+        <div class="confirmation">
+          <p>
+            Commande validée ! <br />Votre numéro de commande est :
+            <span id="orderId"><!-- 65431343444684674 --></span>
+          </p>
+        </div>
       </div>
     </main>
 
     <footer id="footer"></footer>
-
-    <script type="module" src="../js/product.js"></script>
-    <!-- <script src="../test1410.js"></script> -->
+    <script type="module" src="../js/confirm.js"></script>
   </body>
 </html>
