--- a/front2/index.html
+++ b/front2/index.html
@@ -16,22 +16,20 @@
   </head>
 
   <body>
-    <header id="header"></header>
+    <header id="header">
+      <nav>
+        <!--  <a href="./debugProduit.html"><li>debugProduit</li></a>
+
+      <a href="param.html"><li>paramètres</li></a>
+        <a href="index.html"><li>Accueil</li></a>
+        <a href="front/html/cart.html"><li>Panier</li></a>
+        <a href="../temp/cart2.html"><li>Panier2</li></a>
+        -->
+      </nav>
+    </header>
 
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock">
-        choix du type de Cde :<select name="type_commande" id="type_commande">
-          <option value="-1">--SVP, choisissez un typecommande --</option>
-          <option value="0">simple</option>
-          <option value="1">complexe</option>
-        </select>
-        choix du type d'objet panier" :
-        <select name="color-select" name="type_panier" id="type_panier">
-          <option value="-1">--SVP, choisissez un typecommande --</option>
-          <option value="0">panier classique</option>
-          <option value="1">panier avec des objets "dégradés"</option>
-          <option value="2">avrc des objets "enrichis"</option>
-        </select>
         <div class="titles">
           <h1>Nos produits</h1>
           <h2>Une gamme d'articles exclusifs !</h2>
