debug front1 et front2 OP

--- a/front2/pages/cart.html
+++ b/front2/pages/cart.html
@@ -68,7 +68,7 @@
               <form method="get" class="cart__order__form">
                 <div id="formulaire"></div>
 
-                <input type="checkbox" checked id="remplir" />préremplir
+                <input type="checkbox" checked id="remplir" />Préremplir
 
                 <br />
                 <br />
