test ulterieur3 + modif formater prix

--- a/front/pages/cart.html
+++ b/front/pages/cart.html
@@ -96,13 +96,13 @@
           <div class="cart__item__content__titlePrice">
             <h2>Nom du produit</h2>
 
-            <p><span id="pu">1000</span> €. (PU.)</p>
+            <p><span id="pu">1000</span> . (PU.)</p>
           </div>
           <div class="cart__item__content__settings__delete">
             <p class="deleteItem">Supprimer tout</p>
           </div>
           <p>
-            Prix total : <span id="prixArticle"></span><span> €. ,Qte : </span
+            Prix total : <span id="prixArticle"></span><span> , Qté : </span
             ><span id="qteArticles">50</span>
           </p>
           <div id="lesCouleurs"></div>
@@ -131,7 +131,7 @@
         />
         <div class="bton_nbr" id="btonPlus">+</div>
         <h4>
-          prix sous total : <span class="monPrixColor">10</span> €.
+          prix sous total : <span class="monPrixColor">10</span> .
 
           <span id="">=></span> Qté : <span class="qteLigneCde"> 4 </span> ,
           <!-- prix : <span class="prixLigne">10</span> €. -->
@@ -140,7 +140,6 @@
       </article>
     </template>
 
-    <!-- <script src="../js/main.js"></script> -->
     <script src="../js/commun.js"></script>
 
     <script type="module" src="../js/cart.js"></script>
