--- a/front/pages/confirmation.html
+++ b/front/pages/confirmation.html
@@ -33,6 +33,7 @@
     </main>
 
     <footer id="footer"></footer>
+    <script src="../js/commun.js"></script>
     <script type="module" src="../js/confirm.js"></script>
   </body>
 </html>
