--- a/front/pages/cart.html
+++ b/front/pages/cart.html
@@ -27,7 +27,7 @@
           <h1>Votre panier</h1>
           <p>
             Total (<span id="totalQuantity"><!-- 2 --></span> articles) :
-            <span id="totalPrice"><!-- 84,00 --></span> €
+            <span id="totalPrice"><!-- 84,00 --></span>
           </p>
           <section class="cart">
             <section id="cart__items">
@@ -67,8 +67,9 @@
             <div class="cart__order">
               <form method="get" class="cart__order__form">
                 <div id="formulaire"></div>
+                <!-- <input type="checkbox"   checked  id="remplir" />Préremplir -->
 
-                <input type="checkbox" checked id="remplir" />Préremplir
+                <input type="checkbox" id="remplir" />Préremplir
 
                 <br />
                 <br />
